--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 # requirements.txt
-# Any other dependencies should be listed here, excluding tkinter
+# Any other dependencies should be listed here,
